fix #405 left align note title in list pages

--- a/app/assets/stylesheets/app.sass
+++ b/app/assets/stylesheets/app.sass
@@ -1036,6 +1036,7 @@ header.topbar
         .notebook_expander
           visibility: hidden
         .name
+          word-wrap: break-word
           font-family: museo-sans, "Helvetica", Arial, Sans-serif
           display: inline
           width: 100px
@@ -1072,6 +1073,7 @@ header.topbar
           &.note
             background: url(asset-path('notebook-sprite.png','image')) no-repeat -924px 0 transparent
         &.note
+          text-align: left
           background: url(asset-path('notebook-sprite.png','image')) no-repeat -790px 0 transparent
           color: #333
           padding-top: 35px
